--- a/examples/workflow-standalone/package.json
+++ b/examples/workflow-standalone/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "@eclipse-glsp-examples/workflow-glsp": "2.2.0-next",
-    "@eclipse-glsp/client": "2.2.0-next"
+    "@eclipse-glsp/client": "2.2.0-next",
+    "inversify-logger-middleware": "^3.1.0"
   },
   "devDependencies": {
     "@types/shelljs": "0.8.12",
@@ -42,6 +43,7 @@
     "css-loader": "^6.7.1",
     "inversify": "^6.0.1",
     "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "source-map-loader": "^4.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
