--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -54,6 +54,9 @@
     "@types/file-saver": "^2.0.5",
     "@types/lodash": "4.14.191"
   },
+  "peerDependencies": {
+    "inversify": "^6.0.1"
+  },
   "publishConfig": {
     "access": "public"
   }
