--- a/packages/glsp-sprotty/package.json
+++ b/packages/glsp-sprotty/package.json
@@ -43,6 +43,9 @@
     "@vscode/codicons": "^0.0.25",
     "snabbdom-to-html": "^7.1.0"
   },
+  "peerDependencies": {
+    "inversify": "^6.0.1"
+  },
   "publishConfig": {
     "access": "public"
   }
